# jsondaora

./: .bumpversion.cfg  .gitignore  404.html  Bakefile  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
changelog/: index.html
contributing/: index.html
dataclassesjson/: __init__.py  _deserializers.py  asdataclass.py  asdict.py  asjson.py  dataclassjson.py  exceptions.py  schema.py
dataclassesjson/tests/: test_asdataclass.py  test_asjson.py  test_asjson_cpython.py  test_schema.py
dataclassjson/: __init__.py  _asdict.py  _asjson.py  _typecasting.py  asdataclass.py  asjson.py  dataclass.py
dataclassjson/tests/: test_asdataclass.py  test_asjson.py  test_asjson_cpython.py
docs/: changelog.md  contributing.md  features.md  index.md  python-dataclass.md
docs/src/: test.sh
docs/src/index/: index_00_basic.output  index_00_basic.output2  index_00_basic.py  index_00_basic.result  index_01_disable_typecasting.py  index_02_deserialize_fields.output  index_02_deserialize_fields.py  index_02_typecasting_fields.py  index_03_omit_output_fields.py  index_03_serialize_fields.output  index_03_serialize_fields.output2  index_03_serialize_fields.py  index_03_skip_recursive_fields.py
docs/tutorial/: intro.md
features/: index.html
json/: index.html
jsondaora/: __init__.py  base.py  dataclasses.py  decorator.py  deserializers.py  exceptions.py  schema.py  serializers.py  typed_dict.py
jsondaora/tests/: test_dataclass.py  test_dataclass_typed_dict.py  test_schema.py  test_serialize.py  test_typed_dict.py
python-dataclass/: index.html
scripts/: changelog-add-change.sh  changelog-add-release.sh
search/: search_index.json
src/: test.sh
src/index/: index_00_basic.output2  index_01_disable_typecasting.py  index_01_disable_typecasting.result  index_02_deserialize_fields.output2  index_02_deserialize_fields.py  index_02_typecasting_fields.py  index_02_typecasting_fields.result  index_03_omit_output_fields.py  index_03_omit_output_fields.result  index_03_serialize_fields.output  index_03_serialize_fields.output2  index_03_serialize_fields.py
src/tutorial/custom-data-types/: index.html
src/tutorial/intro/: index.html
tests/: test_dataclass.py
tutorial/custom-data-types/: index.html
tutorial/intro/: index.html
typingjson/: __init__.py  base.py  deserializers.py  fields.py  schema.py  serializers.py  typed_dict.py
typingjson/tests/: test_asjson.py  test_dataclass.py  test_dataclass_typed_dict.py  test_schema.py  test_serialize.py  test_typed_dict.py
