[build-system]
requires = ['flit']
build-backend = 'flit.buildapi'

[tool.flit.metadata]
module = 'typingjson'
author = 'Diogo Dutra'
author-email = 'diogodutradamata@gmail.com'
home-page = 'https://github.com/dutradda/typingjson'
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Software Development :: Libraries',
]
requires = []
description-file = 'README.md'
requires-python = '>=3.8'

[tool.flit.metadata.urls]
Documentation = 'https://dutradda.github.io/typingjson/'

[tool.flit.metadata.requires-extra]
test = [
    'black',
    'flake8',
    'isort',
    'ipython',
    'mypy',
    'pytest-cov',
    'pytest-mock',
    'pytest>=5.1.1',
    'tox'
]
doc = [
    'mkdocs',
    'mkdocs-material',
    'markdown-include'
]
orjson = [
    'orjson==2.0.7'
]

[tool.isort]
case_sensitive= '1'
use_parentheses = '1'
line_length = '79'
order_by_type = '1'
multi_line_output = '3'
include_trailing_comma = '1'
lines_after_imports = '2'
atomic = '1'

[tool.black]
exclude = '''
    \.pyi
'''
target-version = ['py38']
line-length = '79'
skip-string-normalization = '1'

[tool.towncrier]
    package = 'typingjson'
    package_dir = ''
    filename = 'docs/CHANGELOG.md'
    title_format =  '{version} ({project_date})'
    directory = 'changelog.d'
    template = 'towncrier_template.rst'

    [[tool.towncrier.type]]
        directory = "change"
        name = "Changes"
        showcontent = true
